Updated header layout and styling

--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -11,9 +11,13 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <img src="images/profile.jpeg" alt="Kibiwott Kamoo" class="profile-pic">
-              <h1>Kibiwott Kamoo</h1>
+        <div class="header-info">
+  <img src="images/profile.jpeg" alt="Kibiwott Kamoo" class="profile-pic">
+  <div>
+    <h1>Kibiwott Kamoo</h1>
+    <p><h2>Welcome to My Portfolio</h2></p>
+  </div>
+</div>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
