Update GitHub link for Portfolio Website

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h2>Projects</h2>
         <ul>
             <li>
-                <strong>Portfolio Website</strong> – <a href="https://github.com/Thegenarator/My-Portfolio" target="_blank">View on GitHub</a>
+                <strong>Portfolio Website</strong> – <a href="https://github.com/Thegenarator">View on GitHub</a>
                 <br>
                 A personal website to showcase my work and skills.
             </li>
